--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=yes">
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
   <title>The Iron Yard Crowdsourced Lunch & Drink Favorites</title>
