Adds MARTA stations

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
   <!-- Tabletop -->
   <script type="text/javascript" src="plugins/tabletop.js"></script>
 
+  <!-- Font Awesome -->
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+  <!-- Awesome Markers -->
+  <link rel="stylesheet" type="text/css" href="plugins/awesome-markers/leaflet.awesome-markers.css">
+  <script type="text/javascript" src="plugins/awesome-markers/leaflet.awesome-markers.min.js"></script>
+
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="marta-stations.js"></script>
 
   <!-- Google Analytics -->
   <script type="text/javascript" src="analytics.js"></script>
